[package]
name = "wgpu_glyph"
version = "0.6.0"
authors = ["Héctor Ramón Jiménez <hector0193@gmail.com>"]
edition = "2018"
description = "A fast text renderer for wgpu, powered by glyph_brush"
license = "MIT"
keywords = ["font", "ttf", "truetype", "wgpu", "text"]
repository = "https://github.com/hecrj/wgpu_glyph"
documentation = "https://docs.rs/wgpu_glyph"
readme = "README.md"

[dependencies]
wgpu = { git = "https://github.com/gfx-rs/wgpu-rs", rev = "8f083e54c57f7411c60b53fc8366be254bace093" }
glyph_brush = "0.6"
log = "0.4"
bytemuck = "1.1.0"

[dev-dependencies]
env_logger = "0.7"
winit = "0.20.0-alpha4"
raw-window-handle = "0.3"
